# Homura

./: .gitignore  CMakeLists.txt  README.md
Engine/: application.h
Engine/Application/: application.h
Engine/Component/private/: camera.cpp
Engine/Component/public/: camera.h
Engine/RHI/Vulkan/: pixelFormat.h
Engine/RHI/Vulkan/Doc/: vulkan.md
Engine/RHI/Vulkan/private/: RHIResources.cpp  pixelFormat.cpp  vulkanBuffer.cpp  vulkanCommandBuffer.cpp  vulkanCommandPool.cpp  vulkanDescriptorSet.cpp  vulkanDevice.cpp  vulkanDevice.h  vulkanFence.cpp  vulkanFrameBuffer.cpp  vulkanFramebuffer.cpp  vulkanFramebuffers.cpp  vulkanGfxPipeline.cpp  vulkanInstance.cpp  vulkanLayout.cpp  vulkanQueue.cpp  vulkanQueue.h  vulkanRHI.cpp  vulkanRenderPass.cpp  vulkanSampler.cpp  vulkanShader.cpp  vulkanSurface.cpp  vulkanSwapChain.cpp  vulkanSwapChain.h  vulkanSynchronization.cpp  vulkanTexture.cpp
Engine/RHI/Vulkan/public/: RHIResources.h  VulkanRHI.h  debugUtils.h  pixelFormat.h  rhiResources.h  vulkanBuffer.h  vulkanCommandBuffer.h  vulkanCommandPool.h  vulkanDescriptorSet.h  vulkanDevice.h  vulkanFence.h  vulkanFrameBuffer.cpp  vulkanFrameBuffer.h  vulkanFramebuffer.h  vulkanFramebuffers.h  vulkanGfxPipeline.h  vulkanInstance.h  vulkanLayout.h  vulkanQueue.h  vulkanRHI.h  vulkanRenderPass.h  vulkanSampler.h  vulkanShader.h  vulkanSurface.h  vulkanSwapChain.h  vulkanSynchronization.h  vulkanTexture.h  vulkanTypes.h  vulkanVertex.h
Engine/platform/: input.h
Engine/platform/private/: applicationWindow.cpp
Engine/platform/public/: applicationWindow.h
configuration/: root_directory.h.in
engine/application/: application.h
engine/base/allocator/private/: allocator.cpp
engine/base/allocator/public/: allocator.h
engine/base/jobSystem/private/: jobSystem.cpp  stealQueue.cpp  workStealQueue.cpp
engine/base/jobSystem/public/: jobSystem.h  stealQueue.h  workStealQueue.h
engine/rhi/vulkan/private/: vulkanBuffer.cpp  vulkanCommandBuffer.cpp  vulkanDescriptorSet.cpp  vulkanDevice.cpp  vulkanFramebuffer.cpp  vulkanGfxPipeline.cpp  vulkanInstance.cpp  vulkanLayout.cpp  vulkanRHI.cpp  vulkanRenderPass.cpp  vulkanShader.cpp  vulkanSurface.cpp  vulkanSwapChain.cpp  vulkanSynchronization.cpp  vulkanTexture.cpp
engine/rhi/vulkan/public/: pixelFormat.h  rhiResources.h  vulkanBuffer.h  vulkanCommandBuffer.h  vulkanDescriptorSet.h  vulkanDevice.h  vulkanFramebuffer.h  vulkanGfxPipeline.h  vulkanInstance.h  vulkanLayout.h  vulkanQueue.h  vulkanRHI.h  vulkanRenderPass.h  vulkanSampler.h  vulkanShader.h  vulkanSurface.h  vulkanSwapChain.h  vulkanSynchronization.h  vulkanTexture.h  vulkanTypes.h
engine1/platform/public/: input.h
engine1/rhi1/vulkan1/private/: pixelFormat.cpp  rhiResources.cpp  vulkanInstance.cpp  vulkanSynchronization.cpp  vulkanTexture.cpp
engine1/rhi1/vulkan1/public/: debugUtils.h  rhiResources.h  vulkanCommandBuffer.h  vulkanInstance.h  vulkanTexture.h  vulkanVertex.h
examples/Triangle/: main.cpp
examples/Triangles/: main.cpp
examples/model/: main.cpp
examples/triangle/: main.cpp
include/: filesystem.h  tiny_obj_loader.h
libs/libs/: glfw3.lib  libassimpd.5.dylib  libvulkan.1.2.154.dylib
libs/vulkan/: vk_enum_string_helper.h
resources/shader/model/: model.frag  model.vert
resources/shader/triangle/: shader_depth.vert  shader_depth.vert.spv  shader_texture.frag  shader_texture.vert  shader_texture.vert.spv  triangle.frag  triangle.vert  triangle.vert.spv  triangle_vertexbuffer.frag  triangle_vertexbuffer.frag.spv
